<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_payment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/special_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special_meal_caps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView18"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/chicken_curry_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chicken_curry"
        android:padding="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/special_menu"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/curry_description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curry_description"
        app:layout_constraintStart_toStartOf="@id/chicken_curry_textView"
        app:layout_constraintTop_toBottomOf="@id/chicken_curry_textView"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
