<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/back_color"
        android:layout_width="417dp"
        android:layout_height="742dp"
        android:background="@color/dullCyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_available"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/special_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/special_meal_caps"
        android:textColor="@color/Cyan"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/nav_drawer_back"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@color/Cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/white_back"
        android:layout_width="323dp"
        android:layout_height="440dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/special_menu_text" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/Cyan"
        android:text="@string/scan"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        tools:targetApi="lollipop" />
    <ImageButton
        android:id="@+id/announce_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:src="@drawable/ic_baseline_notifications_none_24"
        app:layout_constraintEnd_toStartOf="@id/payment_Ibutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nav_drawer_back"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/payment_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/announce_Ibutton"
        app:layout_constraintStart_toEndOf="@id/announce_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/scan_Ibutton"
        app:layout_constraintTop_toTopOf="@id/announce_Ibutton"
        app:srcCompat="@drawable/ic_payment_icon_24" />

    <ImageButton
        android:id="@+id/scan_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:background="@drawable/round_back"
        android:padding="8dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_scanner_24"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton"
        app:layout_constraintStart_toEndOf="@id/payment_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/history_Ibutton"
        />

    <ImageButton
        android:id="@+id/history_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:minWidth="48dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_history_24"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintStart_toEndOf="@id/scan_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/profile_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton" />

    <ImageButton
        android:id="@+id/profile_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:layout_marginEnd="8dp"
        android:minWidth="48dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/history_Ibutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_Ibutton"
        app:layout_constraintTop_toTopOf="@id/history_Ibutton"/>

</androidx.constraintlayout.widget.ConstraintLayout>