<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="409dp"
        android:layout_height="731dp"
        android:background="@color/dullCyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="176dp"
        android:layout_height="44dp"

        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/payment"
        android:textColor="@color/Cyan"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="414dp"
        android:layout_height="71dp"
        android:background="@color/Cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/available_plans"
        android:textColor="@color/darkblue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/special_meal_caps"
        android:textColor="@color/darkblue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dullCyan"
        android:contentDescription="@string/todoo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/group_39"
        tools:ignore="ImageContrastCheck"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dullCyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/group_41"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dullCyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        app:srcCompat="@drawable/group_42"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:text="₹ 3850/-"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:text="₹ 155/-"
        android:textColor="@color/darkblue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:text="₹ 50/-"
        android:textColor="@color/darkblue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:text="CHICKEN CURRY"
        android:textColor="@color/darkblue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/announce_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:src="@drawable/ic_baseline_notifications_none_24"
        app:layout_constraintEnd_toStartOf="@id/payment_Ibutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView15"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/payment_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:background="@drawable/round_back"
        android:padding="8dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/announce_Ibutton"
        app:layout_constraintStart_toEndOf="@id/announce_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/scan_Ibutton"
        app:layout_constraintTop_toTopOf="@id/announce_Ibutton"
        app:srcCompat="@drawable/ic_payment_icon_24" />

    <ImageButton
        android:id="@+id/scan_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:minWidth="48dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_scanner_24"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton"
        app:layout_constraintStart_toEndOf="@id/payment_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/history_Ibutton"
        />

    <ImageButton
        android:id="@+id/history_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:minWidth="48dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_history_24"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintStart_toEndOf="@id/scan_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/profile_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton" />

    <ImageButton
        android:id="@+id/profile_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:layout_marginEnd="8dp"
        android:minWidth="48dp"

        android:importantForAccessibility="no"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/history_Ibutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_Ibutton"
        app:layout_constraintTop_toTopOf="@id/history_Ibutton"/>

</androidx.constraintlayout.widget.ConstraintLayout>